examples/test/testpolicy13538.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13538
  namespace: namespace337
spec:
  podSelector:
    matchLabels:
      key16: value3
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key9: value3
      podSelector:
        matchLabels:
          key22: value18
          key4: value19
          key6: value12
